Web Inspector: Event Listeners section is missing 'once', 'passive' event listener flags https://bugs.webkit.org/show_bug.cgi?id=167080

Reviewed by Joseph Pecoraro.

Source/JavaScriptCore:

* inspector/protocol/DOM.json:
Add "passive" and "once" items to the EventListener type.

Source/WebCore:

Test: inspector/dom/getEventListenersForNode.html

* inspector/InspectorDOMAgent.cpp:
(WebCore::InspectorDOMAgent::buildObjectForEventListener):
Add "passive" and "once" values to the EventListener protocol object when applicable.

Source/WebInspectorUI:

* Localizations/en.lproj/localizedStrings.js:
* UserInterface/Views/EventListenerSectionGroup.js:
(WebInspector.EventListenerSectionGroup):
(WebInspector.EventListenerSectionGroup.prototype._type): Deleted.

LayoutTests:

Tests the result of DOMAgent.getEventListenersForNode and ensures that additional options
are passed to the frontend.

* inspector/dom/getEventListenersForNode-expected.txt: Added.
* inspector/dom/getEventListenersForNode.html: Added.


Canonical link: https://commits.webkit.org/186570@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213873 268f45cc-cd09-0410-ab3c-d52691b4dbfc